# agora

./: .gitignore  .woodpecker.yml  Cargo.toml  FEEDBACK.md  P2P_PLAN.md  PARALLEL_WORK_PLAN.md  README.md  ROADMAP.md  TODO.md  config.example.toml  dev.bat  launch-agora-fast.bat  launch-agora.bat  rebuild.bat
.cargo/: config.toml
.sovereign/: clippy.toml  mcp-config.json  tasks
.sovereign/investigations/agora/: phase2-sigchain-behavior-spec.md
agora-app/: Cargo.toml  tauri.conf.json
agora-app/frontend/: TEST_REPORT_IMAGE_E2E.md  package-lock.json  package.json
agora-app/frontend/src/: app.html
agora-app/frontend/src/lib/: api.ts  crypto.ts  themes.ts
agora-app/frontend/src/lib/__tests__/: crypto.test.ts
agora-app/frontend/src/lib/components/: CreateRoomModal.svelte  CreateSpaceModal.svelte  InviteUserModal.svelte  JoinRoomModal.svelte  MessageHoverMenu.svelte  MessageInput.svelte  MessageList.svelte  PresenceIndicator.svelte  Reactions.svelte  RoomList.svelte  SettingsModal.svelte  SpaceSettingsModal.svelte  ThemeSwitcher.svelte
agora-app/frontend/src/lib/stores/: auth.ts
agora-app/frontend/src/routes/: +layout.svelte
agora-app/frontend/src/routes/rooms/: +layout.svelte
agora-app/frontend/src/routes/rooms/[roomId]/: +page.svelte
agora-app/src/: lib.rs  main.rs
agora-app/src/crypto/: commands.rs  keys.rs  machine.rs  megolm.rs  mod.rs  olm.rs  sessions.rs  store.rs
agora-cli/: Cargo.toml
agora-cli/src/: client.rs  main.rs  sigchain.rs  tui.rs
agora-core/: Cargo.toml
agora-core/src/: events.rs  identifiers.rs  lib.rs
agora-core/src/api/: auth.rs  e2ee.rs  events.rs  media.rs  mod.rs  rooms.rs  spaces.rs  sync.rs
agora-core/src/events/: presence.rs  reaction.rs
agora-crypto/: Cargo.toml
agora-crypto/src/: ids.rs  lib.rs  timestamp.rs
agora-crypto/src/account/: mod.rs
agora-crypto/src/agreement/: mod.rs
agora-crypto/src/envelope/: mod.rs
agora-crypto/src/group/: mod.rs
agora-crypto/src/identity/: display.rs  mod.rs
agora-crypto/src/ratchet/: chain.rs  header.rs  keys.rs  mod.rs
agora-crypto/src/store/: mod.rs
agora-p2p/: CHANGELOG.md  Cargo.toml
agora-p2p/examples/: p2p_chat.rs
agora-p2p/src/: error.rs  lib.rs  node.rs  types.rs
agora-p2p/src/discovery/: dht.rs  mdns.rs  mod.rs
agora-p2p/src/discovery/dht/: mod.rs  provider.rs  stub.rs
agora-p2p/src/identity/: mod.rs  yggdrasil.rs
agora-p2p/src/mesh/: mod.rs  peer.rs  replay.rs
agora-p2p/src/mesh/rust_mesh/: address.rs  crypto.rs  mod.rs  routing.rs
agora-p2p/src/nat/: mod.rs
agora-p2p/src/protocol/: codec.rs  messages.rs  mod.rs
agora-p2p/src/transport/: mod.rs  quic.rs  rust_mesh_transport.rs  tls.rs  trait_.rs  yggdrasil.rs
agora-p2p/tests/: integration_test.rs  yggdrasil_integration.rs
agora-server/: Cargo.toml
agora-server/src/: config.rs  error.rs  id_helpers.rs  main.rs  state.rs  sync_engine.rs
agora-server/src/api/: auth.rs  devices.rs  directory.rs  events.rs  keys.rs  media.rs  mod.rs  presence.rs  profile.rs  rooms.rs  sigchain.rs  sync.rs  to_device.rs  typing.rs  user_directory.rs
agora-server/src/store/: mod.rs  presence.rs
agora-server/src/store/sqlite/: e2ee.rs  events.rs  media.rs  mod.rs  rooms.rs  sigchain.rs  users.rs
crates/agora-app/: Cargo.toml  tauri.conf.json
crates/agora-app/capabilities/: default.json
crates/agora-app/frontend/: package-lock.json  package.json
crates/agora-app/frontend/src/: app.css
crates/agora-app/frontend/src/lib/: api.ts
crates/agora-app/frontend/src/lib/components/: AddRoomToSpaceModal.svelte  CreateRoomModal.svelte  FileUploadButton.svelte  JoinRoomModal.svelte  MediaMessage.svelte  MessageList.svelte  RoomList.svelte  SettingsModal.svelte  SpaceSettingsModal.svelte
crates/agora-app/frontend/src/lib/stores/: auth.ts  rooms.ts  sync.ts  theme.ts
crates/agora-app/frontend/src/routes/: +page.svelte
crates/agora-app/frontend/src/routes/auth/login/: +page.svelte
crates/agora-app/frontend/src/routes/auth/register/: +page.svelte
crates/agora-app/frontend/src/routes/rooms/: +layout.svelte  +page.svelte
crates/agora-app/frontend/src/routes/rooms/[roomId]/: +page.svelte
crates/agora-app/src/: lib.rs  main.rs
crates/agora-app/src/crypto/: commands.rs  machine.rs  mod.rs
crates/agora-cli/: Cargo.toml
crates/agora-cli/src/: client.rs  main.rs
crates/agora-core/src/: api.rs  events.rs  identifiers.rs  lib.rs
crates/agora-server/: Cargo.toml
crates/agora-server/src/: config.rs  error.rs  main.rs  state.rs  sync_engine.rs
crates/agora-server/src/api/: auth.rs  devices.rs  directory.rs  events.rs  keys.rs  mod.rs  rooms.rs  spaces.rs  sync.rs  to_device.rs
crates/agora-server/src/store/: mod.rs  sqlite.rs
docs/: E2E.md  identity-properties.md
docs/plans/: 2026-03-05-kos-grand-plan.md  2026-03-05-kos-p2p-integration.md  2026-03-07-agora-chat-identity-display-design.md  2026-03-07-identity-ux-and-future-layers.md  2026-03-09-dht-bootstrap-implementation-plan.md  2026-03-09-pure-dht-bootstrap-design.md
scripts/: build-all.bat  build-all.ps1  build-all.sh  start-app.bat  start-app.ps1  start-app.sh  start-server.bat  start-server.ps1  start-server.sh  start-tui.bat  start-tui.ps1  start-tui.sh
