[workspace]
resolver = "2"
members = [
    "crates/agora-core",
    "crates/agora-server",
    "crates/agora-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ethee/agora"

[workspace.dependencies]
agora-core = { path = "crates/agora-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
