[workspace]
resolver = "2"
members = [
    "agora-core",
    "agora-server",
    "agora-cli",
    "agora-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ethee/agora"

[workspace.dependencies]
agora-core = { path = "agora-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
