[workspace]
resolver = "2"
members = [
    "agora-core",
    "agora-crypto",
    "agora-server",
    "agora-cli",
    "agora-app",
    "agora-p2p",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ethee/agora"

[workspace.dependencies]
agora-core = { path = "agora-core" }
agora-crypto = { path = "agora-crypto" }
agora-p2p = { path = "agora-p2p" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
ciborium = "0.2"
quinn = { version = "0.11", features = ["aws-lc-rs"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
rcgen = { version = "0.13", features = ["crypto"] }
blake3 = "1"
ed25519-dalek = "2"
futures = "0.3"
bytes = "1"
pin-project-lite = "0.2"
rand = "0.9"
mdns-sd = "0.12"
x509-parser = "0.16"
sha2 = "0.10"
dirs = "5"
base64 = "0.22"
sovereign-sdk = { path = "../../SOVEREIGN/lib/sovereign-sdk" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

