[package]
name = "agora-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
agora-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
blake3 = "1"
hex = "0.4"
