[package]
name = "agora-cli"
version.workspace = true
edition.workspace = true

[dependencies]
agora-core = { workspace = true }
agora-crypto = { path = "../agora-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
mime_guess = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
blake3 = "1"
