[package]
name = "agora-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agora-core = { workspace = true }
agora-crypto = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
ciborium = "0.2"

# QUIC transport - force aws-lc-rs
quinn = { version = "0.11", features = ["aws-lc-rs"] }

# TLS - use aws-lc-rs explicitly
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Certificate generation  
rcgen = { version = "0.13", features = ["crypto"] }
blake3 = "1"

# Utilities
futures = "0.3"
bytes = "1"
pin-project-lite = "0.2"
rand = "0.9"

# mDNS discovery
mdns-sd = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[[example]]
name = "p2p_chat"
path = "examples/p2p_chat.rs"
