[package]
name = "agora-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agora-crypto = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
ciborium = { workspace = true }

# QUIC transport - force aws-lc-rs
quinn = { workspace = true, default-features = false, features = ["aws-lc-rs", "runtime-tokio"] }

# TLS - use aws-lc-rs explicitly
rustls = { workspace = true, features = ["aws-lc-rs"] }

# Certificate generation  
rcgen = { workspace = true, default-features = false, features = ["aws_lc_rs", "crypto"] }
blake3 = { workspace = true }

# Utilities
futures = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }

# mDNS discovery
mdns-sd = { workspace = true }

# Certificate parsing
x509-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[[example]]
name = "p2p_chat"
path = "examples/p2p_chat.rs"
