[package]
name = "agora-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
chacha20poly1305 = "0.10"
ciborium = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true }
mdns-sd = { workspace = true }
quinn = { workspace = true, features = ["aws-lc-rs", "runtime-tokio"] }
rcgen = { workspace = true, features = ["aws_lc_rs", "crypto"] }
rustls = { workspace = true, features = ["aws-lc-rs"] }
serde = { workspace = true }
sovereign-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

[[example]]
name = "p2p_chat"
path = "examples/p2p_chat.rs"

[features]
yggdrasil-integration-tests = []
