[package]
name = "agora-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
vodozemac = "0.8"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs-next = "2"
