[package]
name = "agora-server"
version.workspace = true
edition.workspace = true

[dependencies]
agora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
argon2 = "0.5"
rand = "0.8"
toml = "0.8"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
async-recursion = "1"
